# Helios

./: .gitignore  Makefile  README.md
docs/: DATA_RETENTION.md  architecture.md  context-spatial-sampling.md  data-contracts.md  phase1-ingestion.md  phase2-aggregation.md  phase3-ml.md
ingestion-go/: go.mod  go.sum  test_parquet.go
ingestion-go/cmd/generate-test-data/: main.go
ingestion-go/cmd/ingest/: main.go
ingestion-go/cmd/reprocess/: main.go
ingestion-go/cmd/streamtest/: main.go
ingestion-go/cmd/testgen/: main.go
ingestion-go/internal/config/: config.go
ingestion-go/internal/fetcher/: fetcher.go  landsat.go  pc.go  stac.go
ingestion-go/internal/parser/: aoi_cloud.go  geotiff_reader.go  geotiff_reader_test.go  parser.go  vector.go  writer.go
ingestion-go/internal/worker/: pool.go
ml-python/: README.md  _scratch_add_doy_quarantined.py  pyproject.toml  run_dry_run.py
ml-python/analysis/: README.md  __init__.py  dataset_heatmaps.py  gee_heatmaps.py
ml-python/helios_ml/: __init__.py  data.py  data_loader.py  evaluate.py  split.py  train.py
ml-python/tests/: test_data.py
processing-scala/: README.md  build.sbt
processing-scala/src/main/scala/: ValidateParquet.scala
processing-scala/src/main/scala/helios/: Config.scala  FeatureMatrix.scala  LSTMath.scala  Main.scala  SpatialJoin.scala  TargetEncoder.scala
processing-scala/src/test/scala/helios/: ConfigTest.scala  LSTMathTest.scala
staging/dense/: .gitkeep
staging/raw/: .gitkeep
tools/: fetch_zoning.py
tools/zoning/: __init__.py  __main__.py  cli.py  config.py  geometry.py  overpass.py  parser.py  validation.py
