[project]
name = "helios-ml"
version = "0.1.0"
description = "Land Surface Temperature prediction pipeline — model training & inference"
readme = "README.md"  # created by setup script
requires-python = ">=3.12"
license = { text = "Proprietary" }

dependencies = [
    "polars>=1.5.0",
    "xgboost>=2.1.0",
    "scikit-learn>=1.5.0",
    "numpy>=2.0.0",
    "pyarrow>=17.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "matplotlib>=3.9.0",
    "scipy>=1.12.0",
    "folium>=0.16.0",
    "plotly>=5.20.0",
]

# NOTE: geemap and earthengine-api are required for Track A (GEE heatmaps)
# but are left out of core deps to keep installs lean. Install if needed:
#   uv pip install geemap earthengine-api
# See analysis/README.md for details.

# NOTE: shap is not included as a direct dependency due to a llvmlite/numba
# version pin incompatibility with Python ≥ 3.14.  Install it manually:
#   uv pip install "llvmlite>=0.47.0" shap
# The code in evaluate.py imports it lazily with a fallback message if missing.

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B"]
ignore = ["S101"]  # Allow assert in tests

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
